--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,17 @@
 Package: dynpred
-Version: 0.1.1
-Date: 2011-11-01
-Title: Companion package to "Dynamic Prediction in Clinical Survival
+Version: 0.1.2
+Date: 2015-07-13
+Title: Companion Package to "Dynamic Prediction in Clinical Survival
         Analysis"
 Author: Hein Putter
 Maintainer: Hein Putter <H.Putter@lumc.nl>
 Depends: survival
-Imports: survival
+Imports: graphics, stats, utils
 Suggests: mstate
-Description: Functions for dynamic prediction in survival analysis
+Description: The dynpred package contains functions for dynamic prediction in survival analysis.
 License: GPL (>= 2)
 URL: http://www.msbi.nl/putter
-Packaged: 2011-11-01 18:08:59 UTC; hein
+NeedsCompilation: yes
+Packaged: 2015-07-13 19:19:38 UTC; hein
 Repository: CRAN
-Date/Publication: 2011-11-03 11:48:10
+Date/Publication: 2015-07-13 21:22:03
